# elephant-crawler

./: .pre-commit-config.yaml  README.md  docker-compose.yaml  pyproject.toml  requirements.dev.txt
libs/models/: pyproject.toml
libs/models/src/models/: __init__.py  text.py
svc/core-api/: Dockerfile  main.py  requirements.txt
svc/core-api/assets/: init.sql
svc/core-api/src/db/: __init__.py  connection.py  queries.py
svc/core-api/src/types/: __init__.py  connection.py
svc/crawlers/: Dockerfile  README.md  main.py  requirements.txt  scrapy.cfg
svc/crawlers/elephant_scrapper/: items.py  pipelines.py  request_sender.py  settings.py
svc/crawlers/elephant_scrapper/spiders/: tsn_spider.py
svc/crawlers/src/: base.py
svc/crawlers/src/crawlers/: __init__.py  base.py
svc/crawlers/src/network/: connection.py
